--- a/README
+++ b/README
@@ -2,12 +2,30 @@
   Freelib Djatoka Image Server
 =================================================================================
 
-  The FreeLib Djatoka Image Server is a fork of the aDORe-djatoka image server.
+The FreeLib Djatoka Image Server is a fork of the aDORe-djatoka image server.
 The original fork (which attempted to simplify the use of Djatoka) is still
-available as an independent module within this project (it's called 'djatoka'
+available, as an independent module within this project (it's called 'djatoka'
 and has its own README), but a substantial revision of the project and its
 structure is underway.  Until this revision reaches a point of stability, I'd
 recommend you investigate the master branch (not, this, the 'develop' branch).
+
+The new version of this project uses git submodules to pull in the OpenJPEG
+project.  Once you've cloned this repository and checked out the 'develop'
+branch, you'll need to run the following commands (before the OpenJPEG code
+will be pulled in):
+
+  git submodule init
+  git submodule update
+
+I mention this mostly as a reminder to myself because I'm new to git submodules
+and will probably forget it.  With a submodule, the developer can update to the
+latest version of the code by typing:
+
+  cd <module_name> (in our case, openjpeg)
+  git update
+  cd ..
+  git add <module_name>
+  git commit -m 'Updated <module_name> to latest version'
 
 
 =================================================================================
