--- a/README
+++ b/README
@@ -7,10 +7,10 @@ The original fork (which attempted to simplify the use of Djatoka) is still
 available, as an independent module within this project (it's called 'djatoka'
 and has its own README), but a substantial revision of the project and its
 structure is underway.  Until this revision reaches a point of stability, I'd
-recommend you investigate the master branch (not, this, the 'develop' branch).
+recommend you investigate the master branch (not, this, the "develop" branch).
 
 The new version of this project uses git submodules to pull in the OpenJPEG
-project.  Once you've cloned this repository and checked out the 'develop'
+project.  Once you've cloned this repository and checked out the "develop"
 branch, you'll need to run the following commands (before the OpenJPEG code
 will be pulled in):
 
@@ -21,11 +21,12 @@ I mention this mostly as a reminder to myself because I'm new to git submodules
 and will probably forget it.  With a submodule, the developer can update to the
 latest version of the code by typing:
 
-  cd <module_name> (in our case, openjpeg)
-  git update
-  cd ..
-  git add <module_name>
-  git commit -m 'Updated <module_name> to latest version'
+  git submodule foreach git pull origin develop
+  git commit -am 'Updated <module_name> to latest version'
+
+The above references a "develop" branch instead of "master" just because that's
+where my changes to OpenJPEG are (with "master" being the clean upstream).  In
+most other cases, you'd probably want to reference the "master" branch.
 
 
 =================================================================================
