minor documentation tweak

--- a/README
+++ b/README
@@ -9,6 +9,11 @@ and has its own README), but a substantial revision of the project and its
 structure is underway.  Until this revision reaches a point of stability, I'd
 recommend you investigate the master branch (not, this, the "develop" branch).
 
+
+=================================================================================
+  Working with Git's Submodules
+=================================================================================
+
 The new version of this project uses git submodules to pull in the OpenJPEG
 project.  Once you've cloned this repository and checked out the "develop"
 branch, you'll need to run the following commands (before the OpenJPEG code
@@ -19,7 +24,7 @@ will be pulled in):
 
 I mention this mostly as a reminder to myself because I'm new to git submodules
 and will probably forget it.  With a submodule, the developer can update to the
-latest version of the code by typing:
+latest version of the code by typing (from the project's root directory):
 
   git submodule foreach git pull origin develop
   git commit -am 'Updated <module_name> to latest version'
